Add: top bar, change text button

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
     <!--Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Bellota+Text:400,700|Martel:400,700&display=swap" rel="stylesheet">
 
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/227c4e4a3b.js" crossorigin="anonymous"></script>
+
     <!--My css-->
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <div class="container">
+        <div class="top-bar">
+            <button class="change-text-btn">
+                <i class="far fa-keyboard fa-3x"></i>
+            </button>
+        </div>
+        <div class="container-input">
+
+        </div>
+    </div>
     
 </body>
 </html>
