Add: animated buttons, functional popup window

--- a/index.html
+++ b/index.html
@@ -22,9 +22,23 @@
             </button>
         </div>
         <div class="container-input">
-
+            <div class="change-text-form">
+                <div class="change-text-top">
+                    <span class="change-text-window-title">
+                        Change Text
+                    </span>
+                    <button class="change-text-close"><i class="far fa-window-close fa-3x"></i></button>
+                </div>
+                <div class="change-text-middle">
+                    <textarea name="newText" id="new-text" cols="50" rows="10"></textarea>
+                </div>
+                <div class="change-text-bottom">
+                    <button class="change-text-confirm">Confirm<i class="far fa-check-square fa-3x"></i></button>
+                </div>
+            </div>
         </div>
     </div>
     
+    <script src="main.js" type="application/javascript"></script>
 </body>
 </html>
