Add: wpm testing, custom text option

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
             </button>
         </div>
         <div class="container-input">
+            <div class="main-area">
+                <div class="wpm-display">
+                    <span class="wpm-number">0</span>
+                    <span class="wpm-text">WPM</span>
+                </div>
+                <div class="wpm-tester">
+                    <input class="wpm-test-input wpm-test-base" type="text" name="base-text" id="baseText" disabled>
+                    <input class="wpm-test-input wpm-test-user" type="text" name="user-input" id="userInput">
+                    <div class="wpm-click-catcher"></div>
+                </div>
+            </div>
             <div class="change-text-form">
                 <div class="change-text-top">
                     <span class="change-text-window-title">
