Fix autocomplete issues

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <span class="wpm-text">WPM</span>
                 </div>
                 <div class="wpm-tester">
-                    <input class="wpm-test-input wpm-test-base" type="text" name="base-text" id="baseText" disabled>
-                    <input class="wpm-test-input wpm-test-user" type="text" name="user-input" id="userInput">
+                    <input class="wpm-test-input wpm-test-base" type="text" name="base-text" id="baseText" disabled autocomplete="off">
+                    <input class="wpm-test-input wpm-test-user" type="text" name="user-input" id="userInput" autocomplete="off">
                     <div class="wpm-click-catcher"></div>
                 </div>
             </div>
